# orrery

./: ACKNOWLEDGEMENTS  AUTHORS  COPYING  INSTALL  Makefile.am  NEWS  README  aclocal.m4  analemma.c  astrometry.c  configure  configure.in  jovianSatellites.c  moonPosition.c  orrery.c  orrery.h  orreryColors.h  phaseConstants.h  phenomenaConstants.h  planetInfo.c  seasons.c  vSOP87PlanetInfo.c
data/: Makefile.am  Makefile.in  config  lunarEclipseCannon  meteorShowers  orreryLaunch  shoreline
data/constellations/: Andromeda  Antlia  Apus  Aquarius  Aquila  Ara  Aries  Auriga  Bee_Hive  Big_Dipper  Bootes  Caelum  Camelopardalis  Cancer  Canes_Venatici  Canis_Major  Canis_Minor  Capricornus  Carina  Cassiopeia  Centaurus  Cepheus  Cetus  Chamaeleon  Circinus  Columba  Coma_Berenices  Corona_Australis  Corona_Borealis  Corvus  Crater  Crux  Cygnus  Delphinus  Dorado  Draco  Equuleus  Eridanus  False_Cross  Fornax  (+65 more)
data/deepSky/: messier  misc
data/menus/: Africa  Antarctica  Asia  Australia  Europe  Island  North_America  Observatories  South_America  regions
data/orbitalElements/: earthMoonBaryElements  jupiterElements  marsElements  mercuryElements  neptuneElements  plutoElements  saturnElements  uranusElements  venusElements
icons/: Comet.xpm  CometSmall.xpm  Earth.xpm  EarthSmall.xpm  Jupiter.xpm  JupiterSmall.xpm  Makefile.am  Makefile.in  Mars.xpm  MarsSmall.xpm  Mercury.xpm  MercurySmall.xpm  MeteorRadiant.xpm  Moon.xpm  MoonSmall.xpm  Neptune.xpm  NeptuneSmall.xpm  Saturn.xpm  SaturnSmall.xpm  Sun.xpm  SunSmall.xpm  Uranus.xpm  UranusSmall.xpm  Venus.xpm  VenusSmall.xpm  WeakMeteorRadiant.xpm  WeakestMeteorRadiant.xpm  blueMoonImage.xpm  blueMoonImageFlipped.xpm  firstPointInAries.xpm  fullMoonImage.xpm  fullMoonImageFlipped.xpm  jupiterTiny.xpm  moonImage.xpm  moonImage210.xpm  moonImage210Flipped.xpm  moonImageFlipped.xpm
maemoFiles/: Makefile.am  Makefile.in  com.nokia.orrery.service  orrery.desktop
