pkgicondir = ${pkgdatadir}/icons
dist_pkgicon_DATA = \
	Comet.xpm CometSmall.xpm \
	moonImageFlipped.xpm moonImage.xpm \
	fullMoonImageFlipped.xpm fullMoonImage.xpm \
	blueMoonImageFlipped.xpm blueMoonImage.xpm \
	Earth.xpm EarthSmall.xpm \
	Jupiter.xpm JupiterSmall.xpm \
	Mars.xpm MarsSmall.xpm \
	moonImage210.xpm jupiterTiny.xpm \
	moonImage210Flipped.xpm \
	Mercury.xpm MercurySmall.xpm \
	Moon.xpm MoonSmall.xpm \
	MeteorRadiant.xpm WeakMeteorRadiant.xpm WeakestMeteorRadiant.xpm \
	Neptune.xpm NeptuneSmall.xpm \
	Saturn.xpm SaturnSmall.xpm \
	Sun.xpm SunSmall.xpm \
	Uranus.xpm UranusSmall.xpm \
	Venus.xpm VenusSmall.xpm \
	firstPointInAries.xpm
